--- a/.github/workflows/n2n_01x00_call-build-all.yml
+++ b/.github/workflows/n2n_01x00_call-build-all.yml
@@ -43,7 +43,7 @@ on:
                 type: string
                 default: "n2n"
             DOCKER_TAG_PREFIX:
-                description: "docker_tag_prefix           e.g. sh- | conf"
+                description: "docker_tag_prefix           e.g. sh- | conf-"
                 required: false
                 type: string
             DOCKER_TAG_SUFFIX:
@@ -83,10 +83,13 @@ on:
                 default: "Dockerfile.build.debian-stable"
                 required: true
                 type: string
-
+            DOCKER_TEST_SCRIPTS_PATH:
+                description: "docker_test_scripts_path    eg. n2n/script/build"
+                required: false
+                type: string
 jobs:
     init-docker-tag:
-        name: ${{ inputs.DOCKER_TAG_PREFIX }}${{ inputs.VERSION_B_S_rC }} - init-docker-tag
+        name: init-docker-tag - ${{ inputs.DOCKER_TAG_PREFIX }} - ${{ inputs.DOCKER_TAG_SUFFIX }}
         runs-on: ubuntu-latest
         permissions:
             contents: read
@@ -121,7 +124,7 @@ jobs:
                   echo DOCKER_TEST_TAG=${docker_tag} >> $GITHUB_OUTPUT
 
     check-init-version:
-        name: ${{ inputs.DOCKER_TAG_PREFIX }}${{ inputs.VERSION_B_S_rC }} - check-init-version
+        name: check-init-version - ${{ inputs.DOCKER_TAG_PREFIX }} - ${{ inputs.DOCKER_TAG_SUFFIX }}
         uses: ./.github/workflows/n2n_02x00_call-init-version.yml
         with:
             VERSION_BIG: ${{ inputs.VERSION_BIG }}
@@ -138,7 +141,7 @@ jobs:
             DOCKER_BUILD_DOCKERFILE_FIX: ${{ inputs.DOCKER_BUILD_DOCKERFILE_FIX }}
 
     check-output-check-init-version:
-        name: ${{ inputs.DOCKER_TAG_PREFIX }}${{ inputs.VERSION_B_S_rC }} - check-output-check-init-version
+        name: show-check-init-version - ${{ inputs.DOCKER_TAG_PREFIX }} - ${{ inputs.DOCKER_TAG_SUFFIX }}
         needs: [check-init-version]
         runs-on: ubuntu-latest
         permissions:
@@ -160,7 +163,7 @@ jobs:
                   LOG_INFO "DOCKER_BUILD_CACHE_TAG: ${{ needs.check-init-version.outputs.DOCKER_BUILD_CACHE_TAG }}"
 
     check-pushed:
-        name: ${{ inputs.DOCKER_TAG_PREFIX }}${{ inputs.VERSION_B_S_rC }} - check-pushed
+        name: check-pushed - ${{ inputs.DOCKER_TAG_PREFIX }} - ${{ inputs.DOCKER_TAG_SUFFIX }}
         needs: [init-docker-tag]
         uses: ./.github/workflows/n2n_02x01_call-check-pushed.yml
         secrets: inherit
@@ -170,7 +173,7 @@ jobs:
             FORCE_PUSH: ${{ inputs.FORCE_PUSH }}
 
     check-output-check-pushed:
-        name: ${{ inputs.DOCKER_TAG_PREFIX }}${{ inputs.VERSION_B_S_rC }} - docker-output-check-pushed
+        name: show-check-pushed - ${{ inputs.DOCKER_TAG_PREFIX }} - ${{ inputs.DOCKER_TAG_SUFFIX }}
         needs: [check-pushed]
         runs-on: ubuntu-latest
         permissions:
@@ -189,7 +192,7 @@ jobs:
                   LOG_INFO "BUILD_PUSH: ${{ needs.check-pushed.outputs.BUILD_PUSH }}"
 
     check-all-docker-n2n-build-test-publish:
-        name: ${{ inputs.DOCKER_TAG_PREFIX }}${{ inputs.VERSION_B_S_rC }} - check-all-docker-n2n-build-test-publish
+        name: show-all- ${{ inputs.DOCKER_TAG_PREFIX }} - ${{ inputs.DOCKER_TAG_SUFFIX }}
         needs: [check-init-version, init-docker-tag, check-pushed]
         runs-on: ubuntu-latest
         permissions:
@@ -223,7 +226,7 @@ jobs:
                   LOG_INFO "NEED_FIX: ${{ needs.check-init-version.outputs.NEED_FIX }}"
 
     # docker-n2n-build-test:
-    #     name: ${{ inputs.DOCKER_TAG_PREFIX }}${{ inputs.VERSION_B_S_rC }} - docker-n2n-build-test
+    #     name: docker-n2n-build-test - ${{ inputs.DOCKER_TAG_PREFIX }} - false - ${{ inputs.DOCKER_TAG_SUFFIX }}
     #     needs: [check-init-version, init-docker-tag]
     #     uses: ./.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
     #     secrets: inherit
@@ -246,11 +249,11 @@ jobs:
     #         DOCKER_PUSH: ${{ false }}
     #         DOCKER_BUILD_DOCKERFILE_OK: ${{ inputs.DOCKER_BUILD_DOCKERFILE_OK }}
     #         DOCKER_BUILD_DOCKERFILE_FIX: ${{ inputs.DOCKER_BUILD_DOCKERFILE_FIX }}
+    #         DOCKER_TEST_SCRIPTS_PATH: ${{ inputs.DOCKER_TEST_SCRIPTS_PATH }}
 
     docker-n2n-build-test-publish:
-        name: ${{ inputs.DOCKER_TAG_PREFIX }}${{ inputs.VERSION_B_S_rC }} - docker-n2n-build-test-publish
-        needs:
-            [
+        name: docker-n2n-build-test-publish - ${{ inputs.DOCKER_TAG_PREFIX }} - true - ${{ inputs.DOCKER_TAG_SUFFIX }}
+        needs: [
                 check-init-version,
                 init-docker-tag,
                 check-pushed,
@@ -278,3 +281,4 @@ jobs:
             DOCKER_PUSH: ${{ true }}
             DOCKER_BUILD_DOCKERFILE_OK: ${{ inputs.DOCKER_BUILD_DOCKERFILE_OK }}
             DOCKER_BUILD_DOCKERFILE_FIX: ${{ inputs.DOCKER_BUILD_DOCKERFILE_FIX }}
+            DOCKER_TEST_SCRIPTS_PATH: ${{ inputs.DOCKER_TEST_SCRIPTS_PATH }}
