移除不兼容的代码

--- a/.github/workflows/n2n_02x00_call-init-version.yml
+++ b/.github/workflows/n2n_02x00_call-init-version.yml
@@ -81,7 +81,7 @@ on:
 
 jobs:
     init-version:
-        name: ${{ inputs.VERSION_B_S_rC }} - init-version
+        name: init-version -  ${{ inputs.DOCKER_BUILD_DOCKERFILE }}
         runs-on: ubuntu-latest
         permissions:
             contents: read
