配置文件更新

--- a/n2n/config/edge.conf
+++ b/n2n/config/edge.conf
@@ -1,11 +1,17 @@
 # 虚拟网卡名字
+
+# SUPERNODE_HOST:SUPERNODE_PORT
+# supernode 地址和端口
+# docker networks ip
+-l=10.64.83.10:10090
+
 # EDGE_TUN
 -d=T3
 
 # edge ip
 # EDGE_IP
 # -a=dhcp:0.0.0.0
--a=10.3.0.78
+-a=10.65.83.78
 
 # community 名字
 # EDGE_COMMUNITY
@@ -14,10 +20,6 @@
 # community 密码
 # EDGE_KEY
 -k=test
-
-# SUPERNODE_HOST:SUPERNODE_PORT
-# supernode 地址和端口
--l=172.77.5.10:10090
 
 # 使用 AES 加密算法加密传输的数据
 # EDGE_ENCRYPTION
