--- a/n2n/Dockerfile.build.ubuntu-20.04
+++ b/n2n/Dockerfile.build.ubuntu-20.04
@@ -35,12 +35,12 @@ ARG VERSION_B_S_rC
 COPY ./scripts/build/* /tmp/scripts/
 RUN chmod +x /tmp/scripts/*.sh
 
-ARG DOWNLOAD_PATH=/tmp/n2n
+ARG DOWNLOAD_PATH='/tmp/n2n'
 
 # 下载需要的文件
 COPY ./tmp/down_urls.txt /tmp/down_urls.txt
 RUN /tmp/scripts/2x3_n2n_down.sh
-ARG N2N_DESC_DIR="/tmp/desc"
+ARG N2N_DESC_DIR='/tmp/desc'
 # 解压，选择最大的edge文件
 RUN /tmp/scripts/2x4_n2n_extract_all.sh
 RUN /tmp/scripts/2x5_n2n_sel_biggest.sh
