如果之前的容器 重启过 service_healthy 永远不会出现

--- a/n2n/docker-compose.yaml
+++ b/n2n/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
   n2n_edge_dhcpd:
     depends_on:
       n2n_supernode:
-        condition: service_healthy
+        condition: service_started
     image: zctmdc/n2n:sh-latest
     container_name: n2n_edge_dhcpd
     restart: always
@@ -50,7 +50,7 @@ services:
   n2n_edge_dhcpc:
     depends_on:
       n2n_edge_dhcpd:
-        condition: service_healthy
+        condition: service_started
     image: zctmdc/n2n:sh-latest
     container_name: n2n_edge_dhcpc
     restart: always
@@ -71,7 +71,7 @@ services:
   n2n_edge_static:
     depends_on:
       n2n_supernode:
-        condition: service_healthy
+        condition: service_started
     image: zctmdc/n2n:sh-latest
     container_name: n2n_edge_static
     restart: always
@@ -93,7 +93,7 @@ services:
   test-n2n_edge_conf:
     depends_on:
       test-n2n_supernode:
-        condition: service_healthy
+        condition: service_started
     image: zctmdc/n2n:sh-latest
     container_name: test_n2n_edge_conf
     restart: always
@@ -110,7 +110,7 @@ services:
   test-n2n_manual_cmd:
     depends_on:
       test-n2n_supernode:
-        condition: service_healthy
+        condition: service_started
     image: zctmdc/n2n:sh-latest
     container_name: test_n2n_edge_manual_cmd
     restart: always
@@ -135,7 +135,7 @@ services:
   test-n2n_manual_raw:
     depends_on:
       test-n2n_edge_dhcpd:
-        condition: service_healthy
+        condition: service_started
     image: zctmdc/n2n:sh-latest
     container_name: test_n2n_manual_raw
     restart: always
