--- a/n2n/Dockerfile.run
+++ b/n2n/Dockerfile.run
@@ -1,5 +1,7 @@
 ARG VERSION_B_S_rC=latest
-FROM zctmdc/n2n:${VERSION_B_S_rC}  
+ARG DOCKER_APP_NAME=n2n
+ARG REGISTRY_USERNAME=zctmdc
+FROM ${REGISTRY_USERNAME}/${DOCKER_APP_NAME}:${VERSION_B_S_rC}  
 ARG DEBIAN_FRONTEND=noninteractive  
 RUN apt-get -qq update  
 RUN apt-get -qq -y install \
