--- a/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
+++ b/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
@@ -83,7 +83,7 @@ jobs:
             VERSION_B_S_rC: ${{ matrix.version_b_s_rc }}
             STR_OS_ARCHS: ${{ matrix.str_os_archs }}
             STR_DOWNLOAD_URLS: ${{ matrix.str_download_urls }}
-            FORCE_PUSH: ${{ inputs.FORCE_PUSH == 'true' }}
+            FORCE_PUSH: ${{ needs.scan-all.outputs.FORCE_PUSH == 'true' }}
             NEED_FIXLIB_VERSIONS_B_S_rC: ${{ inputs.NEED_FIXLIB_VERSIONS_B_S_rC }}
             DEFIN_LATEST_VERSION: ${{ inputs.DEFIN_LATEST_VERSION }}
             DOCKER_BUILD_DOCKERFILE_OK: ${{ inputs.DOCKER_BUILD_DOCKERFILE_OK }}
