--- a/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
+++ b/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
@@ -61,7 +61,7 @@ jobs:
 
                   force_push=${{ inputs.FORCE_PUSH }}
                   LOG_INFO  FORCE_PUSH: ${force_push}
-                  echo "FORCE_PUSH=${FORCE_PUSH}" >> $GITHUB_OUTPUT
+                  echo "FORCE_PUSH=${force_push}" >> $GITHUB_OUTPUT
 
     build-all:
         name: build-all-${{ matrix.version_b_s_rc }}
